force-app/main/default/objects/Course__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the course has been archived. Archived courses are hidden from catalog but remain for historical reporting. Prevents hard deletes with active enrollments.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>