force-app/main/default/objects/Course__c/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <description>Date and time when the course was archived.</description>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>