force-app/main/default/objects/Course__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <inlineHelpText>Estimated duration in minutes</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>