force-app/main/default/objects/Course__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <inlineHelpText>Minimum score (0-100) required to pass the course quiz. Defaults to 70 if not set.</inlineHelpText>
    <label>Passing Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>