force-app/main/default/objects/Course__c/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <label>Thumbnail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>